--- a/src/Style/_navbar.scss
+++ b/src/Style/_navbar.scss
@@ -1,5 +1,5 @@
 .navbar {
-    background-color: initial;
+    background-color:black;
     height: 80px;
     display: flex;
     justify-content: center;
