--- a/src/Style/_aboutsection.scss
+++ b/src/Style/_aboutsection.scss
@@ -15,8 +15,8 @@
             .image-box {
                 position: relative;
                 z-index: 1;
-                animation-duration: 5s;
-                animation-delay: 1s;
+                animation-duration: 3s;
+                animation-delay: 0.1s;
                 animation-name: rt-fadeInLeft;
                 animation-fill-mode: both;
 
@@ -101,10 +101,20 @@
         }
 
         .info-box {
+            
             .info-item {
                 align-items: center;
                 gap: 20px;
                 margin-bottom: 40px;
+                &:hover{
+                    .info-img::after{
+                        top: 0px;
+                        left: 0px;
+                        height: 55px;
+                        width: 55px;
+
+                    }
+                }
 
                 .info-img {
                     position: relative;
@@ -142,6 +152,7 @@
                 }
 
                 .info-content {
+                  
                     .info-title {
                         font-size: 20px;
                         font-weight: 700;
