--- a/src/Style/_choosesection.scss
+++ b/src/Style/_choosesection.scss
@@ -44,8 +44,7 @@
                 text-align: center;
                 padding: 0 40px;
                 letter-spacing: 1px;
-                background-repeat: no-repeat;
-                background-position: center;
+                
             }
             .title{
                 h2 {
@@ -65,6 +64,110 @@
                     font-size: 16px;
                     line-height: 28px;
                     font-weight: 400;
+                }
+            }
+        }
+        .choose-info-box{
+            .choose-info-item{
+                
+                &:hover{
+                    .info-media{
+                        .info-img::after{
+                            top: -12px;
+                            left: -4px;
+                            height: 60px;
+                            width: 60px;
+    
+                        }
+                    
+                    }
+                  
+                }
+                .info-media{
+                    margin-bottom: 20px;
+                    .info-img{
+                        position: relative;
+                        
+                        &:hover::after{
+                            top: -12px;
+                            left: -4px;
+                            height: 60px;
+                            width: 60px;
+    
+                        }
+                        img {
+                            transition: all .3s ease-in-out;
+                            transform: scale(1.02);
+                            padding: 10px 0 0 10px;
+                            width: 45px;
+                            height: auto;
+    
+                           
+                        }
+                        &::after {
+                            content: "";
+                            height: 36px;
+                            width: 36px;
+                            background-color: #fee5ea;
+                            border-radius: 50%;
+                            position: absolute;
+                            top: -5px;
+                            left: -5px;
+                            z-index: -1;
+                            transition: all .3s ease-in-out;
+                        }
+                    
+                }
+                }
+                .info-content {
+                  
+                    .info-title {
+                        font-size: 20px;
+                        font-weight: 700;
+                        margin-bottom: 5px;
+
+                    }
+
+                    .info-text {
+                        color: #646464;
+                        font-family: 'Roboto', sans-serif;
+                        font-size: 16px;
+                        line-height: 28px;
+                        font-weight: 400;
+                    }
+                }
+             
+            }
+        }
+        .count-num{
+            .success-count-wrap{
+                border: 1px solid #dadada;
+                
+                padding: 38px 0 33px;
+                text-align: center;
+                transition: all;
+                animation:rtBorder 5s infinite linear;
+                @keyframes rtBorder {
+                    0%{
+                        border-radius: 0px;
+                    }
+                    100%{
+                        border-radius: 70px 0px 70px 0px;
+                    }
+                    
+                }
+                .count{
+                    h3{
+                        font-size: 48px;
+                        font-weight: 700;
+                    }
+                }
+                .count-title{
+                    h4{
+                        color: #646464;
+                        font-size: 16px;
+                        font-weight: 500;
+                    }
                 }
             }
         }
