--- a/src/Style/_choosesection.scss
+++ b/src/Style/_choosesection.scss
@@ -44,6 +44,7 @@
                 text-align: center;
                 padding: 0 40px;
                 letter-spacing: 1px;
+                background-repeat: no-repeat;
                 
             }
             .title{
