--- a/src/Style/_var.scss
+++ b/src/Style/_var.scss
@@ -6,6 +6,12 @@ $pink:#FF0336;
     }
     
  }
+ @mixin  ressm {
+    @media (max-width:760px){
+        @content;
+    }
+    
+ }
 
 
 @mixin responsives {
