--- a/src/Style/style.scss
+++ b/src/Style/style.scss
@@ -11,3 +11,7 @@
 @import 'choosesection';
 @import 'trainersection';
 @import 'testinomailsection';
+@import 'logoslider';
+@import 'contactbanner';
+@import 'about';
+@import 'footer';
