--- a/src/Style/style.scss
+++ b/src/Style/style.scss
@@ -14,4 +14,6 @@
 @import 'logoslider';
 @import 'contactbanner';
 @import 'about';
+@import 'traineepage';
+@import 'contactpage';
 @import 'footer';
