feat:trainer details added

--- a/src/Style/style.scss
+++ b/src/Style/style.scss
@@ -15,5 +15,6 @@
 @import 'contactbanner';
 @import 'about';
 @import 'traineepage';
+@import 'traineedetail';
 @import 'contactpage';
 @import 'footer';
