--- a/src/Style/_about.scss
+++ b/src/Style/_about.scss
@@ -35,6 +35,9 @@
 
                     a {
                         color: #fff;
+                        &:hover{
+                            color: #ff0336;
+                        }
                     }
                 }
 
