--- a/src/Style/_logoslider.scss
+++ b/src/Style/_logoslider.scss
@@ -1,6 +1,6 @@
 .logo-slider-wrapper{
     padding: 20px 0px;
-    margin-bottom: 60px;
+    // margin-bottom: 60px;
     .item{
         .imge{
             
