--- a/src/Style/_traineedetail.scss
+++ b/src/Style/_traineedetail.scss
@@ -1,7 +1,8 @@
 .trainer-detail-section {
-    padding: 100px 0px;
+    padding: 100px 0px 20px;
 
     .trainer-item {
+
         .trainer-info-box {
             position: relative;
             background: url(https://radiustheme.com/demo/wordpress/themes/gymat/wp-content/themes/gymat/assets/element/shape-121.png);
@@ -181,7 +182,7 @@
                     line-height: 28px;
                     font-family: 'Montserrat', sans-serif;
                     font-weight: 700;
-            
+
                     color: #000;
 
                     .day {
@@ -198,4 +199,111 @@
             }
         }
     }
+
+    .trainer-contentt {
+        background-color: #f9f9f9;
+        padding: 55px 55px 76px 60px;
+        margin-bottom: 30px;
+
+        h3 {
+            font-size: 22px;
+            line-height: 1.3;
+            position: relative;
+            margin-bottom: 20px;
+            font-family: 'Montserrat', sans-serif;
+            font-weight: 700;
+        }
+
+        p {
+            margin: 0 0 20px;
+            color: #646464;
+            font-size: 15px;
+            font-weight: 400;
+            line-height: 28px;
+            display: block;
+            letter-spacing: 0px;
+        }
+
+        ul {
+            padding: 0px;
+
+            li {
+                position: relative;
+                padding-left: 30px;
+                margin-bottom: 8px;
+
+                &::before {
+                    content: '\f058';
+                    font-weight: 900;
+                    font-family: "Font Awesome 6 Free";
+                    color: #ff0336;
+                    position: absolute;
+                    left: 0;
+                    top: 0;
+                    font-size: 18px;
+                    border-radius: 50%;
+
+                }
+            }
+        }
+
+        .trainer-skills {
+            margin-top: 55px;
+            overflow: hidden;
+
+            .trainer-heading {
+                font-size: 22px;
+                line-height: 1.3;
+                position: relative;
+                margin-bottom: 20px;
+                font-family: 'Montserrat', sans-serif;
+                font-weight: 700;
+            }
+
+            .trainer-skill-each {
+                margin-bottom: 12px;
+
+                .trainer-name {
+                    font-size: 14px;
+                    font-weight: 500;
+                    color: #111;
+                    margin-bottom: 10px;
+                    line-height: 32px;
+                    text-transform: capitalize;
+                }
+
+                .progress {
+                    height: 6px;
+                    background-color: #eee;
+                    border-radius: 4px;
+                    overflow: inherit;
+
+                    .progress-bar {
+                        position: relative;
+                        height: 6px;
+                        background: linear-gradient(270deg, #FF0336 0%, rgba(255, 3, 54, .27) 100%);
+                        border-radius: 4px;
+                        overflow: inherit;
+
+                        span {
+                            font-size: 14px;
+                            font-weight: 500;
+                            color: #111;
+                            position: absolute;
+                            right: 0;
+                            top: -34px;
+                            padding-bottom: 10px;
+                            line-height: 1;
+                        }
+                    }
+
+
+
+                }
+            }
+        }
+
+
+    }
+
 }
