class details added

--- a/src/Style/style.scss
+++ b/src/Style/style.scss
@@ -16,5 +16,6 @@
 @import 'about';
 @import 'traineepage';
 @import 'traineedetail';
+@import 'classdetail';
 @import 'contactpage';
 @import 'footer';
